--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "react-wavify": "^1.5.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.25"
   }
 }
