--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "windows-battery": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
